--- a/MonthlyStatement/Areas/Admin/Views/Categories/Index.cshtml
+++ b/MonthlyStatement/Areas/Admin/Views/Categories/Index.cshtml
@@ -70,9 +70,9 @@
                                             </td>
                                             <td class="text-center">
                                                 <div class="buttons">
-                                                    <a class="btn btn-icon btn-info" data-original-title="Thông tin danh mục" href="@Url.Action("Details", "Categories", new { id = item.category_id })">
-                                                        <i class="fas fa-info-circle"></i>
-                                                    </a>
+                                                    @*<a class="btn btn-icon btn-info" data-original-title="Thông tin danh mục" href="@Url.Action("Details", "Categories", new { id = item.category_id })">
+                                                            <i class="fas fa-info-circle"></i>
+                                                        </a>*@
                                                     <a class="btn btn-icon btn-primary" data-original-title="Sửa" href="@Url.Action("Edit", "Categories", new { id = item.category_id })">
                                                         <i class="far fa-edit"></i>
                                                     </a>
@@ -82,7 +82,7 @@
                                         foreach (var items in Model.Where(c => c.category_of_id == item.category_id).ToList())
 
                                         {
-                                            j++; 
+                                            j++;
                                             <tr class="Search">
                                                 <td class="text-center">
                                                     @(i).@(j)
@@ -94,10 +94,10 @@
                                                 </td>
                                                 <td class="text-center">
                                                     <div class="buttons">
-                                                        <a class="btn btn-icon btn-info" data-original-title="Thông tin danh mục" href="@Url.Action("Details", "Categories", new { id = items.category_id })">
+                                                        @*<a class="btn btn-icon btn-info" data-original-title="Thông tin danh mục" href="@Url.Action("Details", "Categories", new { id = items.category_id })">
                                                             <i class="fas fa-info-circle"></i>
-                                                        </a>
-                                                        <a class="btn btn-icon btn-primary" data-original-title="Sửa" href="@Url.Action("Edit", "Categories", new { id = item.category_id })">
+                                                        </a>*@
+                                                        <a class="btn btn-icon btn-primary" data-original-title="Sửa" href="@Url.Action("Edit", "Categories", new { id = items.category_id })">
                                                             <i class="far fa-edit"></i>
                                                         </a>
                                                     </div>
