--- a/MonthlyStatement/Areas/Admin/Views/ReportPeriods/FormReports.cshtml
+++ b/MonthlyStatement/Areas/Admin/Views/ReportPeriods/FormReports.cshtml
@@ -21,7 +21,7 @@
                                     <i class="fas fa-user-alt"></i>
                                 </div>
                                 <h2>Bộ môn</h2>
-                                <a href="#" class="btn btn-light mt-4">Xem báo cáo</a>
+                                <a href="#" class="btn btn-light mt-4">Xem chi tiết</a>
                                 <a href="@Url.Action("FormDepartmentEdit", "ReportPeriods", new { id = Model.FormDepartmentReports.FirstOrDefault(f => f.report_period_id == Model.report_period_id).form_department_report_id})" class="btn btn-primary mt-4">Chỉnh sửa</a>
                             </div>
                         </div>
@@ -37,7 +37,7 @@
                                     <i class="fas fa-user"></i>
                                 </div>
                                 <h2>Cá nhân</h2>
-                                <a href="#" class="btn btn-light mt-4">Xem báo cáo</a>
+                                <a href="#" class="btn btn-light mt-4">Xem chi tiết</a>
                                 <a href="@Url.Action("FormPersonalEdit", "ReportPeriods", new { id = Model.FormPersonalReports.FirstOrDefault(f => f.report_period_id == Model.report_period_id).form_personal_report_id})" class="btn btn-warning mt-4">Chỉnh sửa</a>
                             </div>
                         </div>
