--- a/MonthlyStatement/Views/Shared/_NavBarPartialView.cshtml
+++ b/MonthlyStatement/Views/Shared/_NavBarPartialView.cshtml
@@ -90,7 +90,7 @@
                 <img alt="image" src="~/assets/img/user.png"> <span class="d-sm-none d-lg-inline-block"></span>
             </a>
             <div class="dropdown-menu dropdown-menu-right pullDown">
-                <a href="@Url.Action("Index", "Profile", new {Area = "Admin"})" class="dropdown-item has-icon">
+                <a href="@Url.Action("Index", "Profile")" class="dropdown-item has-icon">
                     <i class="far fa-user"> </i>
                     Profile
                 </a>
