fix edit report period

--- a/MonthlyStatement/Areas/Admin/Views/Faculty/Edit.cshtml
+++ b/MonthlyStatement/Areas/Admin/Views/Faculty/Edit.cshtml
@@ -35,7 +35,7 @@
                                                 @Html.ValidationMessageFor(model => model.faculty_name, "", new { @class = "text-danger" })
                                             </div>
                                             <div style="text-align: center; margin-top:1.8rem" class="mb-3">
-                                                <button style="width:180px; color:white" type="submit" class="btn btn-primary" onclick="if (!confirm('Lưu chỉnh sửa?')) { return false }">
+                                                <button style="width:180px; color:white" type="submit" class="btn btn-primary">
                                                     Lưu
                                                 </button>
                                                 &emsp;
