--- a/MonthlyStatement/Areas/Admin/Views/ReportPeriods/FormPersonalEdit.cshtml
+++ b/MonthlyStatement/Areas/Admin/Views/ReportPeriods/FormPersonalEdit.cshtml
@@ -22,7 +22,7 @@
                             <form>
                                 <div class="form-group">
                                     <label for="exampleFormControlInput1">Tên người tạo mẫu báo cáo</label>
-                                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Nhập tên người tạo">
+                                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Tên người tạo">
                                 </div>
                                 <div class="table-responsive">
                                     <table class="table table-striped" id="table-2">
