--- a/MonthlyStatement/Views/Profile/Index.cshtml
+++ b/MonthlyStatement/Views/Profile/Index.cshtml
@@ -14,126 +14,125 @@
         avt = "~/assets/img/user.png";
     }
 }
+    <section style="background-color: #eee;">
+        <div class="container py-5">
+            <div class="row">
+                <div class="col-lg-4">
+                    <div class="card mb-4">
+                        <div class="card-body text-center">
+                            <img src="@Url.Content(avt)" alt="avatar"
+                                 class="rounded-circle img-fluid" style="width: 150px;">
+                            <h5 class="my-3"></h5>
 
-<section style="background-color: #eee;">
-    <div class="container py-5">
-        <div class="row">
-            <div class="col-lg-4">
-                <div class="card mb-4">
-                    <div class="card-body text-center">
-                        <img src="@Url.Content(avt)" alt="avatar"
-                             class="rounded-circle img-fluid" style="width: 150px;">
-                        <h5 class="my-3"></h5>
+                        </div>
 
                     </div>
-
+                    <div class="d-flex justify-content-center mb-2">
+                        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#iconModal">Chỉnh sửa</button>
+                    </div>
                 </div>
-                <div class="d-flex justify-content-center mb-2">
-                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#iconModal">Chỉnh sửa</button>
-                </div>
-            </div>
-            <div class="col-lg-8">
-                <div class="card mb-4">
-                    <div class="card-body">
-                        <div class="row">
-                            <div class="col-sm-3">
-                                <p class="mb-0">Tên:</p>
+                <div class="col-lg-8">
+                    <div class="card mb-4">
+                        <div class="card-body">
+                            <div class="row">
+                                <div class="col-sm-3">
+                                    <p class="mb-0">Tên:</p>
+                                </div>
+                                <div class="col-sm-9">
+                                    <p class="text-muted mb-0"></p>
+                                </div>
                             </div>
-                            <div class="col-sm-9">
-                                <p class="text-muted mb-0"></p>
+                            <hr>
+                            <div class="row">
+                                <div class="col-sm-3">
+                                    <p class="mb-0">Tài khoản:</p>
+                                </div>
+                                <div class="col-sm-9">
+                                    <p class="text-muted mb-0"></p>
+                                </div>
                             </div>
-                        </div>
-                        <hr>
-                        <div class="row">
-                            <div class="col-sm-3">
-                                <p class="mb-0">Tài khoản:</p>
+                            <hr>
+                            <div class="row">
+                                <div class="col-sm-3">
+                                    <p class="mb-0">Khoa:</p>
+                                </div>
+                                <div class="col-sm-9">
+                                    <p class="text-muted mb-0"></p>
+                                </div>
                             </div>
-                            <div class="col-sm-9">
-                                <p class="text-muted mb-0"></p>
-                            </div>
-                        </div>
-                        <hr>
-                        <div class="row">
-                            <div class="col-sm-3">
-                                <p class="mb-0">Khoa:</p>
-                            </div>
-                            <div class="col-sm-9">
-                                <p class="text-muted mb-0"></p>
-                            </div>
-                        </div>
-                        <hr>
-                        <div class="row">
-                            <div class="col-sm-3">
-                                <p class="mb-0">Ngành học:</p>
-                            </div>
-                            <div class="col-sm-9">
-                                <p class="text-muted mb-0"></p>
+                            <hr>
+                            <div class="row">
+                                <div class="col-sm-3">
+                                    <p class="mb-0">Ngành học:</p>
+                                </div>
+                                <div class="col-sm-9">
+                                    <p class="text-muted mb-0"></p>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-</section>
-@* button edit profile *@
-<div class="modal fade text-left show" id="iconModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel2">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h3 class="modal-title" id="myModalLabel34">Chỉnh sửa</h3>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">×</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                @*@using (Html.BeginForm("Edit_Profile", "Profile", FormMethod.Post))
-                {
-                    <label class="fileContainer text-center">
+    </section>
+    @* button edit profile *@
+    @*<div class="modal fade text-left show" id="iconModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel2">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h3 class="modal-title" id="myModalLabel34">Chỉnh sửa</h3>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">×</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    @using (Html.BeginForm("Edit_Profile", "Profile", FormMethod.Post))
+                        {
+                            <label class="fileContainer text-center">
 
-                        <br />
-                        <img id="blah" src="@Url.Content(avt)" width="200" alt="Image preview...">
-                        <label for="exampleFormControlFile1" style="color: #808080"></label>
-                        <input accept="image/*" name="avt" type="file" class="form-control-file" id="exampleFormControlFile1">
-                        <label class="control-label" for="input">New Avtatar</label>
+                                <br />
+                                <img id="blah" src="@Url.Content(avt)" width="200" alt="Image preview...">
+                                <label for="exampleFormControlFile1" style="color: #808080"></label>
+                                <input accept="image/*" name="avt" type="file" class="form-control-file" id="exampleFormControlFile1">
+                                <label class="control-label" for="input">New Avtatar</label>
 
-                        <script>
-                            exampleFormControlFile1.onchange = evt => {
-                                const [file] = exampleFormControlFile1.files
-                                if (file) {
-                                    blah.src = URL.createObjectURL(file)
-                                }
-                            }
-                        </script>
-                    </label>
-                    <br />
+                                <script>
+                                    exampleFormControlFile1.onchange = evt => {
+                                        const [file] = exampleFormControlFile1.files
+                                        if (file) {
+                                            blah.src = URL.createObjectURL(file)
+                                        }
+                                    }
+                                </script>
+                            </label>
+                            <br />
 
-                    <label>Email : </label>
-                    <div class="form-group position-relative has-icon-left">
-                        <input type="text" placeholder="Email" class="form-control" value="@Model.email" readonly />
+                            <label>Email : </label>
+                            <div class="form-group position-relative has-icon-left">
+                                <input type="text" placeholder="Email" class="form-control" value="@Model.Email" readonly />
 
-                        <label>Name : </label>
-                        <div class="form-group position-relative has-icon-left">
-                            <input type="text" placeholder="Name" class="form-control" name="name" value="">
+                                <label>Name : </label>
+                                <div class="form-group position-relative has-icon-left">
+                                    <input type="text" placeholder="Name" class="form-control" name="name" value="">
 
-                        </div>
-                        <label>Department : </label>
-                        <div class="form-group position-relative has-icon-left">
-                            <input type="text" placeholder="Department" class="form-control" name="department" value="">
+                                </div>
+                                <label>Department : </label>
+                                <div class="form-group position-relative has-icon-left">
+                                    <input type="text" placeholder="Department" class="form-control" name="department" value="">
 
-                        </div>
-                        <label>Majors : </label>
-                        <div class="form-group position-relative has-icon-left">
-                            <input type="text" placeholder="Majors" class="form-control" name="majors" value="">
+                                </div>
+                                <label>Majors : </label>
+                                <div class="form-group position-relative has-icon-left">
+                                    <input type="text" placeholder="Majors" class="form-control" name="majors" value="">
 
-                        </div>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn grey btn-outline-secondary" data-dismiss="modal">Close</button>
-                        <button type="submit" class="btn btn-outline-primary">Save</button>
-                    </div>
-                }*@
+                                </div>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn grey btn-outline-secondary" data-dismiss="modal">Close</button>
+                                <button type="submit" class="btn btn-outline-primary">Save</button>
+                            </div>
+                        }
+                </div>
             </div>
         </div>
-    </div>
-</div>
+    </div>*@
