--- a/MonthlyStatement/Areas/Admin/Views/ReportPeriods/FormDepartmentEdit.cshtml
+++ b/MonthlyStatement/Areas/Admin/Views/ReportPeriods/FormDepartmentEdit.cshtml
@@ -45,7 +45,9 @@
                                                             </div>
                                                         </div>
                                                     </td>
-                                                    <td>@item.category_content</td>
+                                                    <td style="font-weight:bold">
+                                                        @item.category_content
+                                                    </td>
                                                     <td><a href="#" class="btn btn-primary">Edit</a></td>
                                                 </tr>
                                             </tbody>
