--- a/MonthlyStatement/Views/Profile/Index.cshtml
+++ b/MonthlyStatement/Views/Profile/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model MonthlyStatement.Models.AspNetUser
+﻿@model MonthlyStatement.Models.Profile
 
 
 @{
@@ -14,69 +14,67 @@
         avt = "~/assets/img/user.png";
     }
 }
-    <section style="background-color: #eee;">
-        <div class="container py-5">
-            <div class="row">
-                <div class="col-lg-4">
-                    <div class="card mb-4">
-                        <div class="card-body text-center">
-                            <img src="@Url.Content(avt)" alt="avatar"
-                                 class="rounded-circle img-fluid" style="width: 150px;">
-                            <h5 class="my-3"></h5>
-
-                        </div>
-
-                    </div>
-                    <div class="d-flex justify-content-center mb-2">
-                        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#iconModal">Chỉnh sửa</button>
+<section style="background-color: #eee;">
+    <div class="container py-5">
+        <div class="row">
+            <div class="col-lg-4">
+                <div class="card mb-4">
+                    <div class="card-body text-center">
+                        <img src="@Url.Content(avt)" alt="avatar"
+                             class="rounded-circle img-fluid" style="width: 150px;">
+                        <h5 class="my-3"></h5>
                     </div>
                 </div>
-                <div class="col-lg-8">
-                    <div class="card mb-4">
-                        <div class="card-body">
-                            <div class="row">
-                                <div class="col-sm-3">
-                                    <p class="mb-0">Tên:</p>
-                                </div>
-                                <div class="col-sm-9">
-                                    <p class="text-muted mb-0"></p>
-                                </div>
+                <div class="d-flex justify-content-center mb-2">
+                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#iconModal">Chỉnh sửa</button>
+                </div>
+            </div>
+            <div class="col-lg-8">
+                <div class="card mb-4">
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col-sm-3">
+                                <p class="mb-0">Tên:</p>
                             </div>
-                            <hr>
-                            <div class="row">
-                                <div class="col-sm-3">
-                                    <p class="mb-0">Tài khoản:</p>
-                                </div>
-                                <div class="col-sm-9">
-                                    <p class="text-muted mb-0"></p>
-                                </div>
+                            <div class="col-sm-9">
+                                <p class="text-muted mb-0"></p>
                             </div>
-                            <hr>
-                            <div class="row">
-                                <div class="col-sm-3">
-                                    <p class="mb-0">Khoa:</p>
-                                </div>
-                                <div class="col-sm-9">
-                                    <p class="text-muted mb-0"></p>
-                                </div>
+                        </div>
+                        <hr>
+                        <div class="row">
+                            <div class="col-sm-3">
+                                <p class="mb-0">Tài khoản:</p>
                             </div>
-                            <hr>
-                            <div class="row">
-                                <div class="col-sm-3">
-                                    <p class="mb-0">Ngành học:</p>
-                                </div>
-                                <div class="col-sm-9">
-                                    <p class="text-muted mb-0"></p>
-                                </div>
+                            <div class="col-sm-9">
+                                <p class="text-muted mb-0"></p>
+                            </div>
+                        </div>
+                        <hr>
+                        <div class="row">
+                            <div class="col-sm-3">
+                                <p class="mb-0">Khoa:</p>
+                            </div>
+                            <div class="col-sm-9">
+                                <p class="text-muted mb-0"></p>
+                            </div>
+                        </div>
+                        <hr>
+                        <div class="row">
+                            <div class="col-sm-3">
+                                <p class="mb-0">Ngành học:</p>
+                            </div>
+                            <div class="col-sm-9">
+                                <p class="text-muted mb-0"></p>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </section>
-    @* button edit profile *@
-    @*<div class="modal fade text-left show" id="iconModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel2">
+    </div>
+</section>
+@* button edit profile *@
+@*<div class="modal fade text-left show" id="iconModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel2">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
