--- a/MonthlyStatement/Areas/Admin/Views/Faculty/AttendenceList.cshtml
+++ b/MonthlyStatement/Areas/Admin/Views/Faculty/AttendenceList.cshtml
@@ -34,6 +34,10 @@
                                 <i class="fa fa-plus"></i>
                                 Thêm thành viên
                             </a>
+                            <a style="color:white" type="button" class="btn btn-warning btn-round" href="#">
+                                <i class="fa fa-plus"></i>
+                                Import
+                            </a>
                         </div>
                     </div>
                     <div class="row">
