--- a/MonthlyStatement/Views/Shared/_NavBarPartialView.cshtml
+++ b/MonthlyStatement/Views/Shared/_NavBarPartialView.cshtml
@@ -1,4 +1,16 @@
-﻿<nav class="navbar navbar-expand-lg main-navbar sticky">
+﻿@{
+    string avt = "";
+    if (Session["Avt"] != null)
+    {
+        avt = Session["Avt"].ToString();
+    }
+    else
+    {
+        avt = "~/assets/img/user.png";
+    }
+}
+
+<nav class="navbar navbar-expand-lg main-navbar sticky">
     <div class="form-inline mr-auto">
         <ul class="navbar-nav mr-3">
             <li>
@@ -87,7 +99,7 @@
         <li class="dropdown">
             <a href="#" data-toggle="dropdown"
                class="nav-link dropdown-toggle nav-link-lg nav-link-user">
-                <img alt="image" src="~/assets/img/user.png"> <span class="d-sm-none d-lg-inline-block"></span>
+                <img alt="image" src="@Url.Content(avt)" class="rounded-circle img-fluid" > <span class="d-sm-none d-lg-inline-block"></span>
             </a>
             <div class="dropdown-menu dropdown-menu-right pullDown">
                 <a href="@Url.Action("Index", "Profile")" class="dropdown-item has-icon">
